# cellcutter

./: .dockerignore  CITATION.cff  Dockerfile  LICENSE  README.md  README.qmd  benchmarking.ipynb  meta.yaml  setup.cfg
.github/workflows/: dockerhub.yml
cellcutter/: __init__.py  cli.py  cut.py  utils.py
