[metadata]
name = cellcutter
version = 0.2.6
url = https://github.com/labsyspharm/cellcutter
author = Clemens Hug
license = MIT
licensefile = LICENSE
description = cellcutter is a Python module for creating thumbnail images of cells given a multi-channel TIFF image and segmentation mask
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = cellcutter
install_requires =
    scikit-image
    numpy
    pandas
    tifffile
    zarr
    numcodecs
python_requires = >= 3.8

[options.entry_points]
console_scripts =
    cut_cells = cellcutter.cli:cut
